ローカル開発環境に移行

--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -29,6 +29,7 @@
               </tr>
             </tbody>
           </table><br>
+        <%= f.hidden_field :overwork_enum, {value: '申請中'} %>  
         <%= f.submit "変更を送信する", class: "btn btn-primary" %>
         </div>
       </div>
