--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -59,6 +59,7 @@
               <td><%= af.collection_select :change_superior_id, User.where(["admin = ? or superior = ?", true, true]), :id, :name, :include_blank => true, selected: :include_blank %></td>
             <% end %>
           </tr>
+          <%= af.hidden_field :change_enum, {value: '申請中'} %> 
         <% end %>
       <% end %>
     </tbody>
