--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,17 @@
   <% if @current_user == @user %>
     <% if current_user.superior? || current_user.admin?  %>
       <div class="superior-informaiton">
-        <p>【所属長承認申請のお知らせ】</p>
+        <p>
+          <% if @month_approval_number > 0 %>
+            <font color="red">【所属長承認申請のお知らせ】</font>
+          <% else %>
+            【所属長承認申請のお知らせ】
+          <% end %>
+          <% if @month_approval_number > 0 %>
+            <%= link_to @month_approval_number.to_s + "件の通知があります", edit_month_request_approval_user_path(params:{date: @first_day}), remote: true, :style=>"color:red; border: 4px solid red;" %>
+          <% end %>
+        </p>
+        <div id="edit_month_request_approval" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
         <p>
           <% if @change_approval_number > 0 %>
             <font color="red">【勤怠変更申請のお知らせ】</font>
@@ -63,7 +73,7 @@
     <div class = "show-btn">
       <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
       <%= link_to "CSV出力", user_path(format: :csv, params: {id: @user.id, first_day: @first_day}), class: "btn btn-primary" %>
-      <%= link_to "勤怠修正ログ（承認済）", root_path, class: "btn btn-primary" %>
+      <%= link_to "勤怠修正ログ（承認済）", working_log_user_path(params: {id: @user.id,first_day: @first_day}), class: "btn btn-primary" %>
     </div>
   <% end %>
   <br />
@@ -151,12 +161,21 @@
                 <% if day.overwork_enum == '申請中' %>
                   <%= User.find_by(id: day.overwork_superior_id).name + "に残業申請中" %><br>
                 <% elsif day.overwork_enum == '承認' %>
-                  <%= User.find_by(id: day.overwork_superior_id).name + "より残業承認済" %><br>
+                  <%= User.find_by(id: day.overwork_superior_id).name + "より残業申請承認済" %><br>
                 <% elsif day.overwork_enum == '否認' %>
-                  <%= User.find_by(id: day.overwork_superior_id).name + "より残業否認" %><br>
+                  <%= User.find_by(id: day.overwork_superior_id).name + "より残業申請否認" %><br>
                 <% end %>
               <% end %>
-              <%= User.find_by(id: day.change_superior_id).name + "に勤怠編集申請中" if day.change_superior_id.present?  %></td>
+              <% if day.change_superior_id.present? %>
+                <% if day.change_enum == '申請中' %>
+                  <%= User.find_by(id: day.change_superior_id).name + "に勤怠編集申請中" %><br>
+                <% elsif day.change_enum == '承認' %>
+                  <%= User.find_by(id: day.change_superior_id).name + "より勤怠編集申請承認済" %><br>
+                <% elsif day.change_enum == '否認' %>
+                  <%= User.find_by(id: day.change_superior_id).name + "より勤怠編集申請否認" %><br>
+                <% end %>
+              <% end %>
+          </td>
         </tr>
       <% end %>
     </tbody>
@@ -172,10 +191,17 @@
             <% if @dates.first.month_superior_id == nil%>
               所属長承認　未
             <% else %>
-              <%= User.find(@dates.first.month_superior_id).name %>に承認申請中
+              <% if @dates.first.month_enum == "申請中" %>
+                <%= User.find(@dates.first.month_superior_id).name %>に承認申請中
+              <% elsif @dates.first.month_enum == "承認" %>
+                所属長承認　<%= User.find(@dates.first.month_superior_id).name %>から承認済
+              <% elsif @dates.first.month_enum == "否認"  %>
+                所属長否認　<%= User.find(@dates.first.month_superior_id).name %>から否認
+              <% end %>
             <% end %>
             <% if @current_user == @user %>
               <br><%= f.collection_select :month_superior_id, User.where(["admin = ? or superior = ?", true, true]), :id, :name, :include_blank => true, selected: :include_blank %><br>
+              <%= f.hidden_field :month_enum, {value: '申請中'} %>
               <%= f.submit "申請", class: "btn btn-primary" %>
             <% end %>
           <% end %>
@@ -184,4 +210,3 @@
     </tfoot>
   </table>
 </div>
-  
