--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,18 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <% if logged_in? %>
-      <%= link_to "勤怠システム", current_user, id: "logo" %>
+      <% if !@current_user.admin? %> 
+        <%= link_to "勤怠システム", current_user, id: "logo" %>
+      <% else %>
+        <%= link_to "勤怠システム", root_path, id: "logo" %>
+      <% end %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "トップへ", current_user %></li>
+          <% if !@current_user.admin? %> 
+            <li><%= link_to "トップへ", current_user %></li>
+          <% else %>
+            <li><%= link_to "トップへ", root_path %></li>
+          <% end %>
     <% else %>
       <%= link_to "勤怠システム", root_path, id: "logo" %>
       <nav>
