--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -56,7 +56,7 @@
                 <% end %>  
               </td>
               <td><%= af.text_field :note, class: "form-control" %></td>
-              <td><%= af.collection_select :change_superior_id, User.where(["admin = ? or superior = ?", true, true]), :id, :name, :include_blank => true, selected: :include_blank %></td>
+              <td><%= af.collection_select :change_superior_id, User.where(["superior = ?", true]), :id, :name, :include_blank => true, selected: :include_blank %></td>
             <% end %>
           </tr>
           <%= af.hidden_field :change_enum, {value: '申請中'} %> 
