--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, "ホーム") %>
 <div class="center jumbotron">
   <h1>勤怠システム</h1>
-  <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
-  <h2>アカウント作成は<%= link_to "こちら", signup_path, id: "signup_button" %>から</h2>
+  <% if logged_in? && @current_user.admin? %>
+    <h2>本日も一日頑張っていきましょう！</h2>
+  <% else %>
+    <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
+    <h2>アカウント作成は<%= link_to "こちら", signup_path, id: "signup_button" %>から</h2>
+  <% end %>
 </div>
