--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -125,9 +125,13 @@
           <% else %>
             <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
           <% end %>
-          
-          <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
-          <td><%= day.started_at.floor_to(15.minutes).to_s(:min) if day.started_at.present? %></td>
+          <% if day.change_enum == "承認"  %>
+            <td><%= day.after_started_at.to_s(:hour) if day.started_at.present? %></td>
+            <td><%= day.after_started_at.floor_to(15.minutes).to_s(:min) if day.started_at.present? %></td>
+          <% else %>
+            <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
+            <td><%= day.started_at.floor_to(15.minutes).to_s(:min) if day.started_at.present? %></td>
+          <% end %>
           <td>
             <% if day.worked_on == Date.today && day.started_at.nil? %>
               <% if @current_user == @user %>
@@ -135,8 +139,13 @@
               <% end %>
             <% end %>
           </td>
-          <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
-          <td><%= day.finished_at.floor_to(15.minutes).to_s(:min) if day.finished_at.present? %></td>
+          <% if day.change_enum == "承認"  %>
+            <td><%= day.after_finished_at.to_s(:hour) if day.finished_at.present? %></td>
+            <td><%= day.after_finished_at.floor_to(15.minutes).to_s(:min) if day.finished_at.present? %></td>
+          <% else %>
+            <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
+            <td><%= day.finished_at.floor_to(15.minutes).to_s(:min) if day.finished_at.present? %></td>
+          <% end %>
           <td>
             <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
               <% if @current_user == @user %>
